--- a/styles.css
+++ b/styles.css
@@ -196,3 +196,19 @@
   width: 100%;
   text-align: center;
 }
+
+.input_texarea {
+  padding: 15px;
+  resize: none;
+  width: 100%;
+  height: 100px;
+  height: 36px;
+  box-sizing: border-box;
+  padding: 15px;
+  font-size: 14px;
+  line-height: 18px;
+  color: rgb(4, 18, 27);
+  border: none;
+  border-radius: 5px;
+  background-color: #e8e8e8;
+}
